<resources>
    <string name="app_name">Application1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="zhuti">主题色</string>
    <string name="date_format_split">%d-%d-%d</string>
    <string name="date_format">%d年 %d月 %d日</string>
    <string name="current_day_format">%d月%d日</string>
    <string name="confirm_button">确认</string>
    <string name="cancel_button">取消</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_details">detailsActivity</string>
    <string name="name">姓名</string>
    <string name="button_ok">确定</string>
    <string name="number">金额</string>
    <string name="reason">缘由</string>
    <string name="out_button">随礼</string>
    <string name="in_button">收礼</string>
    <string name="date">日期</string>

</resources>
